# opencv-cmake-sample

./: .gitignore  CMakeLists.txt  README.md
include/: loadimage.hpp
src/: CMakeLists.txt  loadimage.cpp  main.cpp
